Move login to main app bar Remember login in localstorage Provide sign out button when logged in Move webservice to its own package Add LocalStorage module Add CORS suffering

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -6,7 +6,7 @@
 
 	<meta name="description" content="I Love Austin" />
 	<meta name="author" content="Austin" />
-	<base href="http://localhost:9000/"/>
+	<base href="http://localhost:9000"/>
 
 	<script>
 		const globals = {
