--- a/client/src/index.html
+++ b/client/src/index.html
@@ -6,12 +6,14 @@
 
 	<meta name="description" content="I Love Austin" />
 	<meta name="author" content="Austin" />
-	<base href="http://localhost:9000"/>
+	<base href="https://rpggenerator.com/iloveaustin"/>
+<!--	<base href="http://localhost:9000"/>-->
 
 	<script>
 		const globals = {
-			base_url: '<?php echo base_url(); ?>',
-			webserviceUrlBase: 'http://localhost/iloveaustin3/server/public/',
+			base_url: 'https://rpggenerator.com/iloveaustin',
+			webserviceUrlBase: 'https://rpggenerator.com/iloveaustin/ws/',
+			// webserviceUrlBase: 'http://localhost/iloveaustin3/server/public/',
 		};
 	</script>
 </head>
