Set globals.base_url to localhost for dev

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -11,9 +11,10 @@
 
 	<script>
 		const globals = {
-			base_url: 'https://rpggenerator.com/iloveaustin',
+			// base_url: 'https://rpggenerator.com/iloveaustin',
 			// webserviceUrlBase: 'https://rpggenerator.com/iloveaustin/ws/',
-			webserviceUrlBase: 'http://localhost/iloveaustin3/server/public/',
+			base_url: 'https://localhost:9000',
+			webserviceUrlBase: 'http://localhost/iloveaustin/server/public/',
 		};
 	</script>
 </head>
