--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+<!--	<base href="https://rpggenerator.com/iloveaustin"/>-->
+	<base href="http://localhost:9000"/>
 	<meta charset="utf-8" />
 	<title>I Love Austin</title>
 
 	<meta name="description" content="I Love Austin" />
 	<meta name="author" content="Austin" />
-	<base href="https://rpggenerator.com/iloveaustin"/>
-<!--	<base href="http://localhost:9000"/>-->
 
 	<script>
 		const globals = {
