--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<!--	<base href="https://rpggenerator.com/iloveaustin"/>-->
-	<base href="http://localhost:9000"/>
+	<base href="https://rpggenerator.com/iloveaustin"/>
 	<meta charset="utf-8" />
 	<title>I Love Austin</title>
 
@@ -11,10 +10,8 @@
 
 	<script>
 		const globals = {
-			// base_url: 'https://rpggenerator.com/iloveaustin',
-			// webserviceUrlBase: 'https://rpggenerator.com/iloveaustin/ws/',
-			base_url: 'https://localhost:9000',
-			webserviceUrlBase: 'http://localhost/iloveaustin3/server/public/',
+			base_url: 'https://rpggenerator.com/iloveaustin',
+			webserviceUrlBase: 'https://rpggenerator.com/iloveaustin/ws/',
 		};
 	</script>
 </head>
